--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cafe Mern stack",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app.js"
+    "server": "nodemon server --ignore client"
   },
   "keywords": [
     "mern",
