--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cafe Mern stack",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon server --ignore client"
+    "start": "node app.js"
   },
   "keywords": [
     "mern",
