--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Cafe Mern stack",
   "main": "app.js",
   "scripts": {
-    "start": "npm install && node app.js"
+    "start": "cross-env NODE_ENV=production node app.js",
+    "server": "nodemon server --ignore client",
+    "client": "npm run start --prefix client",
+    "client:install": "npm install --prefix client",
+    "client:build": "npm run build --prefix client",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [
     "mern",
