--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ node_modules
 # package-lock.json
 
 task.txt
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
