--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "mongodb": "^4.1.1",
     "mongoose": "^5.13.21",
     "multer": "^1.4.3",
-    "sharp": "^0.29.2",
-    "shortid": "^2.2.15"
+    "sharp": "^0.29.2"
   },
   "engines": {
     "node": ">=13.10.0",
